# mcp-web-search-crawl

./: .dockerignore  Dockerfile  README.md  pyproject.toml
src/mcp_web_search_crawl/: __init__.py  __main__.py  config.py  server.py  utils.py
